@@ -680,4 +680,3 @@ table.insert(tests, "workspace_migration")
 table.insert(tests, "usage_output_streams")
 table.insert(tests, "automate_get_content_changed")
 table.insert(tests, "automate_get_corresponding_path")
-table.insert(tests, "automate_get_corresponding_path")
